# ukis-min_creds

./: .dockerignore  .gitignore  CHANGELOG.rst  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  example.config.yaml
credsvc/: Cargo.toml  example.config.yaml
credsvc/src/: config.rs  main.rs
min_creds/: Cargo.toml  README.md  example.config.yaml
min_creds/src/: config.rs  main.rs  service.rs
python-client/: README.md  example.py  setup.py  test_nonwaiting_clients.py
python-client/credsvc_client/: __init__.py
python-client/min_creds_client/: __init__.py
src/: config.rs  main.rs
