[package]
name = "min_creds"
version = "0.3.0"
authors = ["Nico Mandery <nico.mandery@dlr.de>"]
edition = "2021"
license = "Apache-2.0"

[features]
# compile in OpenSSL as some of the machines we deploy to
# have different openssl version than we need
# (Ubuntu 18.04 vs Centos 7)
"openssl-static" = ["openssl/vendored"]

[dependencies]
argh = "^0.1"
serde_yaml = "^0.8"
eyre = "^0.6"
env_logger = "^0.9"
log = "^0.4"
actix-web-httpauth = "^0.6"

[dependencies.serde]
version= "1"
features = ["derive"]

[dependencies.sha1]
version = "^0.10"
features = ["std"]

[dependencies.chrono]
version = "^0.4"
features = ["serde"]

[dependencies.openssl]
version = "^0.10"

[dependencies.uuid]
version = "^0.8"
features = ["v4"]

[dependencies.actix-web]
version = "^4"
default-features = false
features = ["openssl"]

[dependencies.tokio]
version = "^1"
features = ["sync", "fs", "time", "rt-multi-thread", "macros"]
